<resources>
    <string name="app_name">手机防盗卫士</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">请输入正确邮箱！</string>
    <string name="error_invalid_password">密码少于四位！</string>
    <string name="error_incorrect_password">密码错误！</string>
    <string name="error_field_required">不能为空！</string>
    <string name="savePassword">记住密码</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--导航栏上半部提示字符-->
    <string name="title_activity_main">个人信息</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <!--导航栏下半部按钮提示字符-->
    <string name="appInfo">软件信息</string>
    <string name="login_out">退出</string>
    <string name="main_view">主页面</string>
    <string name="user_info">个人信息</string>
    <string name="user_setting">设置</string>
    <string name="user_search_phone">查找手机</string>
    <string name="user_alert_pwd">修改密码</string>
    <string name="user_collect_finger_data">用户按压</string>

    <!--个人信页面字符-->
    <string name="my_phone_id">手机型号:</string>
    <string name="user_login_id">登录账号:</string>
    <string name="user_guard_is_ok">防盗模式:</string>
    <string name="user_login_date">上次登录:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="guard_switch">防盗开关</string>
    <string name="phone_guard_mode">防盗模式</string>
    <string name="guard_warning_tone">防盗设置</string>
    <string name="guard_operation">防盗操作</string>

    <string name="open_tone_dialog">开启提示音</string>

    <!--选择声音的单选组的标签-->
    <string name="ChooseTone1">滴滴报警</string>
    <string name="ChooseTone2">警车鸣笛</string>

    <!--权限设定-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <!--网络连接-->
    <string name="InternetState">Sorry,网络出现了一点小问题~</string>
    <string name="promptString">请选择手指</string>

</resources>
